# pcap_parser

./: .dockerignore  .gitignore  BENCHMARK_BASELINE.md  Dockerfile  SPEC.md  misc_cap-device_info.csv  oui.csv  output.csv  pcap-parser.1  pcap-parser.bash-completion  pcap-parser.zsh-completion  pcap_analysis.py  pcap_parser.py  pcap_regression.py  pyproject.toml  readme - Copy.md  readme.md  requirements.txt  vlan-240-device_info.csv  wireshark_endpoints.csv
docs/: output-schema.md  regression-fixtures.md
examples/: README.md  advanced-analysis.md  basic-parse.md  benchmark.md  compare-diff.md  docker.md  filtered-parse.md  library-mode.py  regression.md  stats-only.md  streaming-ndjson.md
fixtures/: regression_manifest.json
outputs/: fixed_misc_cap-device_info.csv  large_synthetic-benchmark-run1.json  large_synthetic-benchmark-run2.json  large_synthetic-benchmark-run3.json  misc_cap-benchmark-run1.json  misc_cap-benchmark-run2.json  misc_cap-benchmark-run3.json  misc_cap-conversation_info.csv  misc_cap-device_info.csv  misc_cap-network_data.json  vlan-240-benchmark-run1.json  vlan-240-benchmark-run2.json  vlan-240-benchmark-run3.json  vlan-240-conversation_info.csv  vlan-240-device_info.csv  vlan-240-network_data.json
pcap_visualizer/: README.md  app.py  requirements.txt
pcap_visualizer/d3samples/: sample.html
pcap_visualizer/static/css/: style.css
pcap_visualizer/templates/: base.html  index.html  visualize.html
pcaps/: large_synthetic.pcapng  misc_cap.pcapng  vlan-240.pcapng
schemas/v1.0.0/: conversation-csv-row.schema.json  device-csv-row.schema.json  network-data.schema.json  schema-manifest.json
tests/: test_advanced_analysis.py  test_benchmark_harness.py  test_cli_ergonomics.py  test_hot_path_optimization.py  test_regression_harness.py  test_sprint6_enrichment.py
(+1 files in other folders)
